<resources>
    <string name="app_name">Footube</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="open_nav">Open Menu</string>
    <string name="close_nav">Close Menu</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="ayal_dvir_elay">Ayal, Dvir, Elay</string>
    <string name="home">Home</string>
    <string name="footube">FooTube</string>
    <string name="night_mode">Night Mode</string>
    <string name="views">Views:</string>
    <string name="channel">Channel:</string>
    <string name="add_a_comment">Add a comment</string>
    <string name="add_comment">Add Comment</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="save">Save\n</string>
    <string name="comment">Comment</string>
    <string name="full_screen">Full Screen</string>
    <string name="add_video">Add Video</string>
    <string name="month_prompt">Month</string>
    <string name="year_prompt">Year</string>
    <string name="Hello">Hello\n</string>
    <string name="welcome">Welcome</string>
    <string name="back">back</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="select_thumbnail_image">Select Thumbnail Image</string>
    <string name="select_video">Select Video</string>
    <string name="sign_in">Sign in</string>
    <string name="to_continue_to_youtube">to continue to YouTube</string>
    <string name="forgot_email">Forgot email?</string>
    <string name="show_password">Show password</string>
    <string name="not_your_computer_use_guest_mode_to_sign_in_privately">Not your computer? Use Guest mode to sign in privately.</string>
    <string name="create_account">Create account</string>
    <string name="create_a_google_account">Create a Google Account</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="first_name">First name</string>
    <string name="last_name_optional">Last name (optional)</string>
    <string name="next">Next</string>
    <string name="basic_information">Basic information</string>
    <string name="enter_your_birthday_and_gender">Enter your birthday and gender</string>
    <string name="day">Day</string>
    <string name="year">Year</string>
    <string name="gender">Gender</string>
    <string name="why_we_ask_for_birthday_and_gender">Why we ask for birthday and gender</string>
    <string name="create_a_strong_password">Create a strong password</string>
    <string name="create_a_strong_password_with_a_mix_of_letters_numbers_and_symbols">Create a strong password with a mix of letters, numbers and symbols</string>
    <string name="confirm">Confirm</string>
    <string name="use_your_existing_email">Use your existing email</string>
    <string name="enter_the_email_address_you_want_to_use_for_your_google_account">Enter the email address you want to use for your Google Account</string>
    <string name="email_address">Email address</string>
    <string name="you_ll_need_to_confirm_that_this_email_belongs_to_you">You’ll need to confirm that this email belongs to you</string>
    <string name="get_a_gmail_address_instead">Get a Gmail address instead</string>
    <string name="add_picture_to_your_account">add picture to your account</string>
    <string name="select_image">Select Image</string>
    <string name="update_user">Update User</string>
    <string name="user_name">User Name</string>
    <string name="user_email">User Email</string>
    <string name="select_profile_image">Select Profile Image</string>
    <string name="delete_user">Delete User</string>
    <string name="channel_name">Channel Name</string>
    <string name="likes">Likes</string>
    <string name="share">Share</string>
    <string name="menu">Menu</string>
    <string name="profile_pic">profile Pic</string>
    <string name="edit_your_comment">Edit your comment</string>
    <string name="divider">|</string>
    <string name="menu_for_edit_and_delete">Menu for edit and delete</string>
    <string name="dislikes">Dislikes</string>
    <string name="BaseUrl">http://10.100.102.22:8080/</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_out">Sign out</string>

    <string-array name="months_array">
        <item>month</item>
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <string-array name="gender_array">
        <item>gender</item>
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
</resources>