<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".login.signInScreen2">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="400dp"
            android:layout_height="100dp"
            android:background="@null"
            android:src="@drawable/google" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/basic_information"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/enter_your_birthday_and_gender" />

    <!-- Birthday input fields -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/spinner_month"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/months_array"
            android:padding="20dp"
            android:prompt="@string/month_prompt"
            tools:ignore="HardcodedText" />

        <EditText
            android:id="@+id/edittext_day"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/day"
            android:inputType="number"
            android:padding="20dp" />

        <EditText
            android:id="@+id/edittext_year"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/year"
            android:inputType="number"
            android:padding="20dp"
            android:prompt="@string/year_prompt" />
    </LinearLayout>

    <!-- Gender input field -->
    <Spinner
        android:id="@+id/spinner_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:entries="@array/gender_array"
        android:hint="@string/gender"
        android:padding="20dp" />

    <!-- Why we ask for birthday and gender text -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/why_we_ask_for_birthday_and_gender"
        android:textColor="#0078D7" />

    <TextView
        android:id="@+id/tvErrorMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text=""
        android:textColor="#FF0000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="right"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next" />
    </LinearLayout>

</LinearLayout>
