<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:theme="@style/Theme.MitkademAyalDvirElay"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn= "navigation_view">

    <group
        android:checkableBehavior="single">


        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/login"
            android:title="@string/login" />
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/nav_home"
            android:title="@string/home" />
    </group>
    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/nav_logout"
                android:title="@string/logout" />
            <item
                android:id="@+id/nav_switch_night"
                android:icon="@drawable/moon"
                android:title="@string/night_mode"
                app:actionLayout="@layout/switch_item"
                app:showAsAction="always" />
        </menu>
    </item>


</menu>