<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="161dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:src="@drawable/google" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/use_your_existing_email"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/enter_the_email_address_you_want_to_use_for_your_google_account"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/subtitle"
        android:layout_marginTop="16dp"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp" />

    <TextView
        android:id="@+id/tvErrorMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_input"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text=""
        android:textColor="@android:color/holo_red_dark"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/email_confirmation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvErrorMsg"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/you_ll_need_to_confirm_that_this_email_belongs_to_you"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/get_gmail"
        android:layout_width="197dp"
        android:layout_height="110dp"
        android:layout_below="@id/email_confirmation"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/get_a_gmail_address_instead"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="14sp" />

    <Button
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/get_gmail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/custom_red"
        android:text="@string/next"
        android:textColor="@android:color/white" />
</RelativeLayout>
